  exact matches near cubicle boundaries.
o Fixed opcode level trace and debug (when compiled with
  --with-rtldebug).
o The Image module can now be compiled on SunOS 4.1.1_U1, whose
  assembler doesn't like long strings.
o The pseudo random sequences generated by random() should now be the
  same on 32 bit and 64 bit machines, given the same seed.

Changes since Pike 7.2.30:
----------------------------------------------------------------------

New/improved functionality:
---------------------------

o New Hilfe
    The interactive pike environment you get when running pike without
    giving a program name, has been thoroughly rewritten. Most notably
    it now supports more of the common pike constructs, and is more
    extendable and configurable. Start it and type help for more info.

o AutoDoc
    The major parts of Pike now have some sort of documentation on
    class and function level thanks to the AutoDoc system which has
    been deployed during the last year. Manual dumps are published on
    http://pike.ida.liu.se/docs/reference/. Note that the manuals and
    the manual system are still work in progress.

o pike -x
    When starting pike with the -x parameter, the pike process will
    run the named script in Tools.Standalone, giving the rest of the
    arguments as command-line switches. This is a convenient way of
    running rsif (replace string in file) and pv (the image viewer
    you may be familiar with from Tools.PV).

o pike -e scope
    When running command line one-liners with pike -e you can now
    access the number of arguments, the actual arguments and the
    environment variables through the variables argc, argv and env.

o unbug
    Embryo of a Pike debugger. Neither stable nor finished.

o Unicode 3.2.0
    All tables have been updated to Unicode 3.2.0. This applies both to
    the Unicode module as well as to Pike-global functionality such as
    upper_case/lower_case. unicode_to_string() now also has support for